testData/diagnostics/compilation_errors/sema_errors/invalid_enum.diag.txt
ERROR: invalid enum [no 'YELLOW' field in 'enum']
testData/diagnostics/compilation_errors/sema_errors/invalid_enum.nut:3:8

enum Color { RED, GREEN, BLUE }
let x = Color.YELLOW
        ^-----------


